style: fix z-index for movie cards to be the most forefront

--- a/mm_front/src/styles/MovieCard.css
+++ b/mm_front/src/styles/MovieCard.css
@@ -21,6 +21,7 @@
     border: grey 1px solid;
     overflow: auto;
     color: black;
+    z-index: 999;
 }
 
 .card-result {
